# IACSSEARCH

./: .env.example  .gitignore  README.md  debug_qdrant.py  docker-compose.yml  external_connection_guide.md  project_specification.md  pyproject.toml  usecases.md  work_plan.md
.clinerules/: rev1.md
.clinerules/workflows/: work_plan.md
docs/references/: README.md
docs/references/motor_mongodb/: aggregation.md  connection.md  crud.md
docs/references/qdrant/: vector_search.md
infra/: __init__.py  cache.py  config.py  core.py  database.py  logging.py  vector_store.py
infra/core/: __init__.py  base_schemas.py  cache.py  database.py  vector_store.py
main/: __init__.py  api_gateway.py
modules/comp/: __init__.py
modules/dashboard/: __init__.py
modules/deadline/: __init__.py
modules/email/: __init__.py
modules/issue/: __init__.py
modules/lint/: __init__.py
modules/member/: __init__.py
modules/search/: DEPENDENCY_REFACTOR_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  WORK_PLAN.md  __init__.py  cache_manager.py  orchestrator.py  repository.py  schema.py  search_embedding_service.py  search_performance_monitor.py  search_query_processor.py  search_result_enricher.py  search_vector_service.py
modules/thrd/: __init__.py
tests/: test_search_orchestrator.py
tests/scenario/: search_basic_scenario.py  search_multi_collection_scenario.py  search_performance_scenario.py  search_vector_only_scenario.py
